<?xml version="1.0" encoding="utf-8"?><!--
 Copyright 2017 Amazon.com, Inc. or its affiliates (Amazon). All Rights Reserved.

 Code generated by AWS Mobile Hub. Amazon gives unlimited permission to
 copy, distribute and modify it.

 Source code generated from template: aws-my-sample-app-android v0.18
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signup_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".auth.signin.ui.userpools.SignUpActivity">

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/background" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ar.com.alabarra.guicommons.gui.components.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/sign_up_title"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/sign_up_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_component_margin"
                android:drawableLeft="@drawable/ic_user_white"
                android:drawablePadding="@dimen/default_component_margin"
                android:drawableStart="@drawable/ic_user_white"
                android:hint="@string/sign_in_username"
                android:inputType="textNoSuggestions"
                android:maxLines="1"
                android:textColor="@color/white"
                android:theme="@style/WhiteInputTheme" />

            <EditText
                android:id="@+id/sign_up_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_component_margin"
                android:drawableLeft="@drawable/ic_lock_white"
                android:drawablePadding="@dimen/default_component_margin"
                android:drawableStart="@drawable/ic_lock_white"
                android:fontFamily="sans-serif"
                android:hint="@string/sign_in_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/white"
                android:theme="@style/WhiteInputTheme" />

            <EditText
                android:id="@+id/sign_up_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_component_margin"
                android:drawableLeft="@drawable/ic_face_white"
                android:drawablePadding="@dimen/default_component_margin"
                android:drawableStart="@drawable/ic_face_white"
                android:hint="@string/sign_up_name"
                android:inputType="textPersonName|textCapWords"
                android:maxLines="1"
                android:textColor="@color/white"
                android:theme="@style/WhiteInputTheme" />

            <EditText
                android:id="@+id/sign_up_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_component_margin"
                android:drawableLeft="@drawable/ic_mail_white"
                android:drawablePadding="@dimen/default_component_margin"
                android:drawableStart="@drawable/ic_mail_white"
                android:hint="@string/sign_up_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/white"
                android:theme="@style/WhiteInputTheme" />

            <Button
                style="@style/AccentButton"
                android:layout_width="match_parent"
                android:onClick="signUp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_component_margin"
                android:text="@string/sign_up_button_text" />

        </LinearLayout>

    </ScrollView>


</FrameLayout>
