<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/background" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ar.com.alabarra.guicommons.gui.components.CustomTextView
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/default_component_margin"
                android:layout_marginLeft="@dimen/default_component_margin"
                android:layout_marginEnd="@dimen/default_component_margin"
                android:layout_marginRight="@dimen/default_component_margin"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_component_margin"
                android:text="@string/forgot_password_header"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />

            <ar.com.alabarra.guicommons.gui.components.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_component_margin"
                android:layout_marginLeft="@dimen/default_component_margin"
                android:layout_marginEnd="@dimen/default_component_margin"
                android:layout_marginRight="@dimen/default_component_margin"
                android:layout_marginTop="@dimen/small_component_margin"
                android:text="@string/forgot_password_body"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/reset_password_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_component_margin"
                android:drawableLeft="@drawable/ic_label_white"
                android:drawablePadding="@dimen/default_component_margin"
                android:drawableStart="@drawable/ic_label_white"
                android:hint="@string/sign_up_confirm_code"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@color/white"
                android:theme="@style/WhiteInputTheme" />

            <EditText
                android:id="@+id/reset_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_component_margin"
                android:drawableLeft="@drawable/ic_lock_white"
                android:drawablePadding="@dimen/default_component_margin"
                android:drawableStart="@drawable/ic_lock_white"
                android:fontFamily="sans-serif"
                android:hint="@string/sign_in_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/white"
                android:theme="@style/WhiteInputTheme" />

            <Button
                style="@style/AccentButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_component_margin"
                android:onClick="forgotPassword"
                android:text="@string/forgot_password_button_hint" />

        </LinearLayout>
    </ScrollView>


</FrameLayout>
